--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 .spacer {
-  height: 300px;
+  height: 150px;
 }
 
 /*navBar*/
@@ -124,6 +124,12 @@ footer {
   width: 7%;
 }
 
+/*Burger Menu*/
+
+.menu-wrap {
+  display: none;
+}
+
 /*INDEX*/
 
 /*mainFrame
@@ -145,6 +151,10 @@ los position y z-index
   top: -4.2rem;
   left: 0;
   z-index: -1;
+}
+
+#mainFrame-logo {
+  display: none;
 }
 
 #white {
@@ -178,6 +188,7 @@ h1 {
   position: absolute;
   top: 20%;
   left: 15%;
+  max-width: 600px;
 }
 
 #mainText strong {
@@ -223,11 +234,11 @@ h2 {
   list-style-type: none;
   display: flex;
   justify-content: center;
+  max-width: 1100px;
 }
 
 #brands ul li {
   margin: auto;
-
   overflow: visible;
 }
 
@@ -237,7 +248,7 @@ h2 {
   max-width: 1100px;
   margin: auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
   grid-gap: 2%;
 }
 
@@ -304,7 +315,7 @@ h2 {
 
 #growth-process ul li {
   flex-grow: 1;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
 }
 
@@ -715,22 +726,25 @@ h3 {
   position: absolute;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -200%);
+  transform: translate(-50%, -130%);
 }
 
 /* About Us: Background*/
 
 #aboutus-background-book {
   position: absolute;
-  top: 100%;
+  top: 70%;
   left: 76%;
   z-index: -1;
+  width: 300px;
 }
 
 img#aboutus-background-coffee {
   position: absolute;
-  top: 150%;
+  top: 120%;
   z-index: -1;
+
+  width: 300px;
 }
 
 /* About Us: Team Cards*/
@@ -742,6 +756,7 @@ img#aboutus-background-coffee {
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 14%;
+  padding: 0 2% 0 2%;
 }
 
 #aboutus-team-cards .aboutus-team-member-info {
@@ -896,20 +911,26 @@ img#aboutus-background-coffee {
 }
 
 #pricing-coupon {
+  background-image: url(../img/pricing/cupon.svg);
+  background-size: 1000px;
+  background-repeat: no-repeat;
   width: 1000px;
+  height: 137px;
   position: absolute;
-  margin-top: 3%;
+  margin-top: 1%;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  z-index: -1;
+  z-index: 1;
 }
 
 #pricing-coupon-text {
+  position: absolute;
+  top: 35%;
+  left: 10%;
   display: flex;
   width: 900px;
-  padding-top: 12.3%;
   color: white;
 }
 
@@ -935,4 +956,643 @@ img#aboutus-background-coffee {
 
 #pricing-coupon-discount #pricing-coupon-discount-off {
   color: red;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1281px) {
+  /*Index MQueries Desktop*/
+  #mainText {
+    top: 10%;
+  }
+
+  #mainFrame-button {
+    top: 60%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 60px;
+    line-height: 60px;
+  }
+  #mainFrame-button a {
+    font-size: 1.3rem;
+  }
+
+  #brands ul {
+    flex-wrap: wrap;
+  }
+
+  #brands ul li {
+    margin: 3%;
+  }
+
+  .benefits-cardimg {
+    margin-top: 5%;
+    height: 150px;
+  }
+  #growth-process ul {
+    flex-wrap: wrap;
+  }
+
+  #growth-process ul li {
+    padding: 3%;
+  }
+
+  #growth-process ul li h4 {
+    margin-top: 1%;
+  }
+
+  /*Portfolio MQueries Desktop*/
+  .portfolio-card {
+    height: 270px;
+  }
+
+  /*AboutUs MQueries Desktop*/
+  #aboutus-team h1 {
+    top: 65%;
+  }
+
+  #aboutus-friends #aboutus-friends-imgs {
+    flex-wrap: wrap;
+  }
+
+  #aboutus-friends #aboutus-friends-imgs img {
+    margin: 2%;
+  }
+
+  /*Pricing MQueries Desktop*/
+  #pricing-coupon-discount h2 {
+    margin-bottom: 15%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  /*Index MQueries Tablet*/
+  #mainText {
+    text-align: center;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #mainText h1 {
+    font-size: 2rem;
+  }
+
+  #white-fade {
+    height: 100px;
+  }
+
+  #headquarters-cards {
+    flex-wrap: wrap;
+  }
+
+  #headquarters-miami {
+    margin-top: 5%;
+  }
+
+  #footer-cards {
+    flex-wrap: wrap;
+    margin-top: 0;
+  }
+  .footer-card {
+    margin-top: 10px;
+  }
+
+  /*Portfolio MQueries Tablet*/
+  #portfolio-top-container h1 {
+    top: 8%;
+    font-size: 1.7rem;
+  }
+
+  #portfolio-top-container h3 {
+    top: 7%;
+  }
+
+  .portfolio-card {
+    height: 290px;
+  }
+
+  #background-desert {
+    bottom: -200%;
+  }
+
+  #portfolio-footer {
+    bottom: -200%;
+  }
+
+  #clients h2 {
+    text-align: center;
+    margin: 0;
+    margin-top: 7%;
+  }
+
+  #clients h3 {
+    text-align: center;
+    margin: 0;
+    margin-top: 2%;
+    font-weight: 100;
+  }
+
+  #clients ul {
+    margin: 0;
+    text-align: center;
+    margin-top: 3%;
+  }
+
+  #clients-cards {
+    margin-left: 5%;
+  }
+
+  #clients-cards .clients-card {
+    width: 300px;
+    height: 380px;
+    margin-left: 1px;
+  }
+
+  /*AboutUs MQueries Tablet*/
+  #aboutus-team h1 {
+    top: 65%;
+  }
+
+  #aboutus-friends #aboutus-friends-imgs img {
+    width: 100px;
+  }
+
+  #aboutus-friends-button {
+    width: 120px;
+    height: 40px;
+    line-height: 40px;
+  }
+
+  #aboutus-friends #aboutus-friends-title-container h1 {
+    margin-top: 20%;
+  }
+
+  /*Pricing MQueries Tablet*/
+  .pricing-column {
+    height: 500px;
+  }
+
+  #pricing-coupon-container {
+    width: 600px;
+  }
+
+  #pricing-coupon {
+    width: 700px;
+    background-size: 100%;
+  }
+
+  #pricing-coupon-text {
+    width: 600px;
+    top: 20%;
+  }
+}
+
+@media (max-width: 767px) {
+  /*Index MQueries HiRes Mobile*/
+
+  /*Burger menu*/
+
+  /* MENU STYLES */
+  .menu-wrap {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 85%;
+    z-index: 12;
+  }
+
+  .menu-wrap .toggler {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 12;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    opacity: 0;
+  }
+
+  .menu-wrap .hamburger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 30px;
+    height: 30px;
+    padding: 1rem;
+    background: #00556b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  /* Hamburger Line */
+  .menu-wrap .hamburger > div {
+    position: relative;
+    flex: none;
+    width: 100%;
+    height: 2px;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.4s ease;
+  }
+
+  /* Hamburger Lines - Top & Bottom */
+  .menu-wrap .hamburger > div::before,
+  .menu-wrap .hamburger > div::after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: -10px;
+    width: 100%;
+    height: 2px;
+    background: inherit;
+  }
+
+  /* Moves Line Down */
+  .menu-wrap .hamburger > div::after {
+    top: 10px;
+  }
+
+  /* Toggler Animation */
+  .menu-wrap .toggler:checked + .hamburger > div {
+    transform: rotate(135deg);
+  }
+
+  /* Turns Lines Into X */
+  .menu-wrap .toggler:checked + .hamburger > div:before,
+  .menu-wrap .toggler:checked + .hamburger > div:after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+
+  /* Rotate On Hover When Checked */
+  .menu-wrap .toggler:checked:hover + .hamburger > div {
+    transform: rotate(225deg);
+  }
+
+  /* Show Menu */
+  .menu-wrap .toggler:checked ~ .menu {
+    visibility: visible;
+  }
+
+  .menu-wrap .toggler:checked ~ .menu > div {
+    transform: scale(1);
+    transition-duration: 0.75s;
+  }
+
+  .menu-wrap .toggler:checked ~ .menu > div > div {
+    opacity: 1;
+    transition: opacity 0.4s ease 0.4s;
+  }
+
+  .menu-wrap .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .menu-wrap .menu > div {
+    background: rgba(0, 85, 107, 0.77);
+    width: 200vw;
+    height: 200vw;
+    display: flex;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: all 0.4s ease;
+  }
+
+  .menu-wrap .menu > div > div {
+    text-align: center;
+    max-width: 100vw;
+    max-height: 100vh;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+  }
+
+  .menu-wrap .menu > div > div > ul > li {
+    list-style: none;
+    color: white;
+    font-size: 1.5rem;
+    padding: 1rem;
+  }
+
+  .menu-wrap .menu > div > div > ul > li > a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.4s ease;
+  }
+
+  /*Nav*/
+
+  nav {
+    display: none;
+  }
+  #white-fade {
+    display: none;
+  }
+  .container {
+    position: relative;
+  }
+
+  #mainText {
+    top: 30%;
+    left: 3%;
+  }
+
+  #header-img-container {
+    position: relative;
+  }
+
+  #mainText h1 {
+    margin-right: 0;
+    font-size: 1.3rem;
+    max-width: 270px;
+    text-align: left;
+  }
+
+  #white {
+    display: none;
+  }
+
+  #mainFrame #mainFrame-logo {
+    position: absolute;
+    display: block;
+    z-index: 1;
+    top: 5%;
+    left: 3%;
+    width: 150px;
+  }
+
+  #mainFrame-button {
+    width: 90px;
+    height: 30px;
+    line-height: 30px;
+    top: 50%;
+    left: 70%;
+  }
+
+  #mainFrame-button a {
+    font-size: 1rem;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+  }
+
+  #brands ul {
+    margin-top: 3%;
+  }
+
+  #brands ul img {
+    width: 100px;
+  }
+
+  #benefitsContainer {
+    text-align: center;
+  }
+
+  .benefits-card {
+    margin: 0 5% 0 5%;
+  }
+  .benefits-card h3 {
+    font-size: 1rem;
+  }
+
+  .benefits-card p {
+    margin-top: 0;
+  }
+
+  #benefitsContainer {
+    margin-bottom: 20%;
+  }
+
+  #growth-process ul li img {
+    width: 80px;
+  }
+
+  .growth-solutions-card {
+    width: 35%;
+    height: 330px;
+  }
+
+  #growth-solutions-button {
+    margin-top: 5%;
+    width: 150px;
+    height: 50px;
+    line-height: 50px;
+  }
+
+  #growth-solutions-button a {
+    font-size: 1rem;
+  }
+
+  #headquarters-cards {
+    flex-wrap: wrap;
+  }
+
+  #headquarters-cards {
+    margin-top: 10%;
+  }
+
+  #headquarters-miami {
+    margin-top: 5%;
+  }
+
+  footer h1 {
+    font-size: 2rem;
+  }
+
+  #footer-cards {
+    flex-wrap: wrap;
+  }
+
+  .footer-card {
+    margin-top: 2%;
+  }
+
+  /*Portfolio MQueries HiRes Mobile FIXME*/
+  #portfolio-top-container h1 {
+    font-size: 2rem;
+    top: 1%;
+  }
+
+  #portfolio-top-container h3 {
+    font-size: 1rem;
+    top: 3%;
+  }
+
+  #portfolio-cards {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .portfolio-card img,
+  .portfolio-card h2,
+  .portfolio-card p {
+    top: 0;
+  }
+
+  .portfolio-card {
+    width: 90%;
+    height: 150px;
+  }
+
+  .portfolio-card h2 {
+    font-size: 1rem;
+    display: inline;
+    top: -55px;
+    left: -20%;
+  }
+  .portfolio-card img {
+    width: 60px;
+    position: relative;
+    left: -25%;
+    top: -15px;
+  }
+
+  .portfolio-card p {
+    text-align: left;
+    position: relative;
+    left: 20%;
+    top: -40%;
+    width: 350px;
+  }
+
+  #clients h2 {
+    font-size: 1.5rem;
+    text-align: center;
+    margin: 0;
+    margin-top: 7%;
+  }
+
+  #clients h3 {
+    font-size: 1.2rem;
+    text-align: center;
+    margin: 0;
+    margin-top: 2%;
+    font-weight: 100;
+  }
+
+  #clients ul {
+    margin: 0;
+    text-align: center;
+    margin-top: 3%;
+  }
+
+  #clients ul li {
+    font-size: 1.3rem;
+  }
+
+  #clients-cards {
+    margin-left: 5%;
+  }
+
+  #clients-cards .clients-card {
+    width: 180px;
+    height: 380px;
+    margin-left: 1px;
+  }
+
+  #clients-cards .clients-card #clients-card-img-nutraceutica {
+    width: 150px;
+  }
+
+  /*AboutUs MQueries HiRes Mobile*/
+  #aboutus-top h1 {
+    top: 5%;
+  }
+  #aboutus-top p {
+    font-size: 1.2rem;
+    width: 450px;
+  }
+
+  #aboutus-team h1 {
+    top: 45%;
+    font-size: 2rem;
+  }
+
+  #aboutus-background-book {
+    width: 110px;
+  }
+
+  #aboutus-friends-title-container h1 {
+    font-size: 2rem;
+    margin-top: 15%;
+  }
+
+  #aboutus-friends-imgs img {
+    width: 120px;
+  }
+
+  #aboutus-team-cards .aboutus-team-member-info h4 {
+    text-align: center;
+  }
+
+  #aboutus-team-cards .aboutus-team-member-info {
+    width: 200px;
+    text-align: center;
+  }
+
+  #aboutus-team-cards .aboutus-team-member-img img {
+    width: 200px;
+  }
+
+  #aboutus-friends h3 {
+    margin-top: 15%;
+  }
+
+  /*Pricing MQueries HiRes Mobile*/
+  #pricing-title-container h1 {
+    font-size: 2rem;
+  }
+
+  #pricing-title p {
+    font-size: 1rem;
+    width: 430px;
+    margin-bottom: 5%;
+  }
+
+  #pricing-columns {
+    flex-wrap: wrap;
+  }
+
+  .pricing-column {
+    width: 150px;
+    height: 490px;
+    margin-bottom: 20px;
+  }
+  #pricing-coupon-container {
+    width: 430px;
+  }
+
+  #pricing-coupon {
+    width: 430px;
+    background-size: 430px;
+  }
+
+  #pricing-coupon-text {
+    width: 350px;
+    top: 10%;
+  }
+
+  #pricing-coupon-text h3 {
+    font-size: 0.8rem;
+  }
 }
