--- a/css/style.css
+++ b/css/style.css
@@ -739,7 +739,7 @@ h3 {
   width: 300px;
 }
 
-img#aboutus-background-coffee {
+#aboutus-background-coffee {
   position: absolute;
   top: 120%;
   z-index: -1;
@@ -1122,6 +1122,13 @@ img#aboutus-background-coffee {
     width: 100px;
   }
 
+  #aboutus-background-book {
+    width: 150px;
+  }
+
+  #aboutus-background-coffee {
+    width: 150px;
+  }
   #aboutus-friends-button {
     width: 120px;
     height: 40px;
@@ -1180,7 +1187,7 @@ img#aboutus-background-coffee {
   .menu-wrap .hamburger {
     position: absolute;
     top: 0;
-    left: 0;
+    left: -10px;
     z-index: 1;
     width: 30px;
     height: 30px;
@@ -1269,7 +1276,7 @@ img#aboutus-background-coffee {
   .menu-wrap .menu > div {
     background: rgba(0, 85, 107, 0.77);
     width: 200vw;
-    height: 200vw;
+    height: 300vw;
     display: flex;
     flex: none;
     align-items: center;
@@ -1320,9 +1327,13 @@ img#aboutus-background-coffee {
     position: relative;
   }
 
+  #header-img-container img {
+    min-height: 200px;
+  }
+
   #mainText h1 {
     margin-right: 0;
-    font-size: 1.3rem;
+    font-size: 1rem;
     max-width: 270px;
     text-align: left;
   }
@@ -1335,7 +1346,7 @@ img#aboutus-background-coffee {
     position: absolute;
     display: block;
     z-index: 1;
-    top: 5%;
+    top: -70px;
     left: 3%;
     width: 150px;
   }
@@ -1344,7 +1355,7 @@ img#aboutus-background-coffee {
     width: 90px;
     height: 30px;
     line-height: 30px;
-    top: 50%;
+    top: 40%;
     left: 70%;
   }
 
@@ -1389,7 +1400,7 @@ img#aboutus-background-coffee {
 
   .growth-solutions-card {
     width: 35%;
-    height: 330px;
+    height: 350px;
   }
 
   #growth-solutions-button {
@@ -1412,7 +1423,8 @@ img#aboutus-background-coffee {
   }
 
   #headquarters-miami {
-    margin-top: 5%;
+    margin-top: 8%;
+    margin-bottom: 10%;
   }
 
   footer h1 {
@@ -1440,39 +1452,42 @@ img#aboutus-background-coffee {
 
   #portfolio-cards {
     flex-direction: column;
-    align-items: center;
+    align-self: center;
   }
 
   .portfolio-card img,
   .portfolio-card h2,
   .portfolio-card p {
     top: 0;
+    text-align: left;
   }
 
   .portfolio-card {
+    text-align: left;
     width: 90%;
-    height: 150px;
+    height: 180px;
   }
 
   .portfolio-card h2 {
     font-size: 1rem;
     display: inline;
     top: -55px;
-    left: -20%;
+    left: 2%;
   }
   .portfolio-card img {
     width: 60px;
     position: relative;
-    left: -25%;
-    top: -15px;
+    left: 0%;
+    top: -20px;
   }
 
   .portfolio-card p {
     text-align: left;
     position: relative;
-    left: 20%;
-    top: -40%;
-    width: 350px;
+    left: 22%;
+    top: -30%;
+    width: 250px;
+    align-items: center;
   }
 
   #clients h2 {
@@ -1488,24 +1503,32 @@ img#aboutus-background-coffee {
     margin: 0;
     margin-top: 2%;
     font-weight: 100;
+    font-size: 1.3rem;
   }
 
   #clients ul {
     margin: 0;
     text-align: center;
-    margin-top: 3%;
+    margin-top: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
   }
 
   #clients ul li {
     font-size: 1.3rem;
+    margin-right: 3%;
   }
 
   #clients-cards {
     margin-left: 5%;
+    text-align: center;
+    margin: 0;
+    margin-right: 0;
+    flex-direction: column;
   }
 
   #clients-cards .clients-card {
-    width: 180px;
+    width: 250px;
     height: 380px;
     margin-left: 1px;
   }
@@ -1514,22 +1537,35 @@ img#aboutus-background-coffee {
     width: 150px;
   }
 
+  #background-desert {
+    top: 420%;
+  }
+
+  #portfolio-footer {
+    top: 470%;
+    font-size: 1rem;
+  }
+
   /*AboutUs MQueries HiRes Mobile*/
   #aboutus-top h1 {
     top: 5%;
   }
   #aboutus-top p {
     font-size: 1.2rem;
-    width: 450px;
+    width: 350px;
   }
 
   #aboutus-team h1 {
-    top: 45%;
+    top: 450px;
     font-size: 2rem;
   }
 
+  #aboutus-background-coffee {
+    width: 90px;
+  }
+
   #aboutus-background-book {
-    width: 110px;
+    width: 80px;
   }
 
   #aboutus-friends-title-container h1 {
@@ -1539,6 +1575,11 @@ img#aboutus-background-coffee {
 
   #aboutus-friends-imgs img {
     width: 120px;
+  }
+
+  #aboutus-team-cards {
+    text-align: center;
+    justify-content: center;
   }
 
   #aboutus-team-cards .aboutus-team-member-info h4 {
@@ -1558,6 +1599,18 @@ img#aboutus-background-coffee {
     margin-top: 15%;
   }
 
+  #aboutus-friends img {
+    width: 90px;
+  }
+
+  #aboutus-friends-button {
+    width: 130px;
+    height: 40px;
+    line-height: 40px;
+    margin-bottom: 7%;
+    margin-top: 5%;
+  }
+
   /*Pricing MQueries HiRes Mobile*/
   #pricing-title-container h1 {
     font-size: 2rem;
@@ -1565,31 +1618,40 @@ img#aboutus-background-coffee {
 
   #pricing-title p {
     font-size: 1rem;
-    width: 430px;
+    width: 300px;
     margin-bottom: 5%;
   }
 
   #pricing-columns {
+    width: 300px;
     flex-wrap: wrap;
   }
 
   .pricing-column {
-    width: 150px;
+    width: 250px;
     height: 490px;
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
   }
+
+  .pricing-column h2 {
+    margin-top: 10%;
+  }
+
   #pricing-coupon-container {
-    width: 430px;
+    width: 350px;
   }
 
   #pricing-coupon {
-    width: 430px;
-    background-size: 430px;
+    width: 350px;
+    background-size: 350px;
   }
 
   #pricing-coupon-text {
-    width: 350px;
-    top: 10%;
+    width: 310px;
+    top: 7%;
+    left: 7%;
   }
 
   #pricing-coupon-text h3 {
